4th try to fix unresponsiveness on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,7 @@ body {
   min-height: 100%;
   width: 100vw;
   overflow-x: hidden;
+  overflow-y: scroll;
   display: flex;
   align-items: center;
 }
@@ -154,7 +155,7 @@ body {
   display: flex;
   justify-content: center;
   gap: 10vw;
-  bottom: 0;
+  bottom: -15rem;
 }
 
 .footer-item {
